@@ -64,7 +64,7 @@ public class DynaWaltzContext {
         this.dynaWaltzParameters = Objects.requireNonNull(dynaWaltzParameters);
         this.frequencySynchronizer = setupFrequencySynchronizer(dynamicModels.stream().anyMatch(InfiniteBus.class::isInstance) ? SetPoint::new : OmegaRef::new);
 
-        for (BlackBoxModel bbm : getBlackBoxDynamicModelStream().collect(Collectors.toList())) {
+        for (BlackBoxModel bbm : getBlackBoxDynamicModelStream().toList()) {
             macroStaticReferences.computeIfAbsent(bbm.getName(), k -> new MacroStaticReference(k, bbm.getVarsMapping()));
             bbm.createMacroConnections(this);
             bbm.createDynamicModelParameters(this, dynamicModelsParameters::add);
@@ -82,7 +82,7 @@ public class DynaWaltzContext {
         return fsConstructor.apply(dynamicModels.stream()
                 .filter(FrequencySynchronizedModel.class::isInstance)
                 .map(FrequencySynchronizedModel.class::cast)
-                .collect(Collectors.toList()));
+                .toList());
     }
 
     public Network getNetwork() {
@@ -219,7 +219,7 @@ public class DynaWaltzContext {
     }
 
     public List<BlackBoxModel> getBlackBoxDynamicModels() {
-        return getBlackBoxDynamicModelStream().collect(Collectors.toList());
+        return getBlackBoxDynamicModelStream().toList();
     }
 
     public Stream<BlackBoxModel> getBlackBoxEventModelStream() {
